add credit for hugo

--- a/config.toml
+++ b/config.toml
@@ -72,7 +72,7 @@ theme="flex-bp-hugo-cv"
   wordpress        = ""
   medium           = ""
   # Professional/Business Oriented Communities
-  linkedin         = "arthur.deschamps"
+  linkedin         = "arthurdeschamps"
   linkedin_company = ""
   foursquare       = ""
   xing             = ""
